--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": ">=7.2",
-        "laravel/framework": "^5.5||^6.0||^7.0||^8.0||^9.0||^10.0||^11.0",
-        "divineomega/laravel-password-exposed-validation-rule": "^4.0"
+        "laravel/framework": "^5.5||^6.0||^7.0||^8.0||^9.0||^10.0||^11.0||^12.0",
+        "seebotrun/laravel-password-exposed-validation-rule": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.14.1|^1.9.1",
@@ -39,7 +39,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/langleyfoxall/laravel-password-exposed-validation-rule",
+            "url": "https://github.com/seebotrun/laravel-password-exposed-validation-rule",
             "no-api": true
         },
         {
